--- a/VRChat/54/1384654.html
+++ b/VRChat/54/1384654.html
@@ -79,9 +79,9 @@
     "viewport">
     <meta name="csrf-param" content="authenticity_token">
     <script src=
-    "https://asset.booth.pm/assets/23738a784829eea36de7.js" defer=
+    "https://asset.booth.pm/assets/c5f0dd028d55c2e17b56.js" defer=
     "defer" nonce=
-    "fZ+rowGndmBhetkA48wXXzhv8v4m+Vp5rJtvp2pEsrE="></script>
+    "Fs2ROjcYs3ljDE8K8/vj0E9jbjmvSztN5mO6JuSKyAc="></script>
     <script type="application/ld+json">
     {"@context":"https://schema.org","@type":"Product","name":"【MMD】【Unity】リアルサメモデル","description":"自分用として作ったサメですが、\nMMD用のリアルなサメモデルとか無いなぁとも思っているので、配ってみます。\n\n\n\n◆形式\n・MMD用のPMXファイル、\n・Unity用のFBXファイル、\n・VRChat用のUnityパッケージ、\n・メタセコイア用のMQOZファイル\nが入っています。\nボーン形式はHumanoid形式です。\n\nそのままMMDで踊れるしVRCでも使えます。\n\n（不足があったら困る場合があるかもで、意味もなく指や足のボーンも入っていますが、別に削っても問題ない筈です）\n\n\n\n◆テクスチャ\n４Kの解像度のテクスチャとノーマルマップと、\n透明マップが入っています。\n\nこのサメモデルのヒレにはアルファ抜きの要素もあって、\n細かい「切れ込み」の傷なんかも表現しています。（６枚目の画像）\n\nそれはテクスチャ自身の透明要素によって表示していますが、\nこれが使えない環境のことも考えて、「明暗でアルファを抜く用の白黒の画像」も入っています。\n\nhttps://byneet.fanbox.cc/posts/3093307\nMMDモデルにノーマルマップを適用する方法についてはここを参考にしてください\n\n\n◆ポリゴン数\n４角ポリゴンで７６００ポリゴン程です。\n\n\n\n◆モーフ\n・歯茎をムキ出すモーフ\n・歯茎をすぼめるモーフ\n\n・エラを開くモーフ\n・エラを閉じるモーフ\n\n・歯の角度を曲げるモーフ（口を閉じる時のため）\n・ちょっと睨むモーフ（本来そんなの無いですが）\n\nなどが用意されています。\n\n顎の関節を２重構造にしたり、\nホホにもボーンを入れているので、\nかなり口をガバっと開くことができます。\n\n\n\n◆このサメについて\n\n基本的にホオジロザメを意識しているサメですが、\nデザイン的に１００％ホオジロザメでは無かったりします。\n\n尻ビレと脂ビレなどにアレンジがあって、ちょっと大きめにしてたりします。\n\n\n\n◆利用規約\n勝手に再配布以外の行為なら、ゲーム利用、動画利用、\n何をしてくれても多分オッケーです。\n\n（例えばVRCに、モデルをプライベートでアップロードして個人的に楽しむのはOKですが、パブリックでアップロードするのとかはNGです）\n\n\n何か問題があったら教えてください。","url":"https://booth.pm/ja/items/1384654","offers":{"priceCurrency":"JPY","@type":"Offer","price":"800"},"image":"https://booth.pximg.net/c/620x620/9b436d1b-ecc9-44b3-a4c7-a14f856c56f0/i/1384654/46b95d58-4523-4770-9fc6-543c65f78faa_base_resized.jpg"}
     </script>
@@ -95,7 +95,7 @@
     "//www.googletagmanager.com/ns.html?id=GTM-WLLNDM" style=
     "display:none;visibility:hidden" width="0"></iframe></noscript>
     <script src="https://asset.booth.pm/google_tag_manager_ad.js"
-    nonce="fZ+rowGndmBhetkA48wXXzhv8v4m+Vp5rJtvp2pEsrE="></script>
+    nonce="Fs2ROjcYs3ljDE8K8/vj0E9jbjmvSztN5mO6JuSKyAc="></script>
     <div class="service-informations">
       <div class="promotion-banner"></div>
     </div>
@@ -148,7 +148,7 @@
                             "font-bold leading-[32px] m-0 text-[24px]">
                               【MMD】【Unity】リアルサメモデル
                             </h2>
-                            <div class="flex mt-8">
+                            <div class="flex items-center mt-8">
                               <div class="mr-auto">
                                 <div class="flex wish-list-link">
                                   <a class=
@@ -184,6 +184,8 @@
                                     </div>
                                   </div></a>
                                 </div>
+                              </div>
+                              <div id="js-item-share-buttons">
                               </div>
                               <div class="relative">
                                 <input class="peer appearance-none"
@@ -292,9 +294,6 @@
                           </ul>
                         </div>
                       </div>
-                      <div class=
-                      "desktop:pt-[20px] mobile:py-[16px]" id=
-                      "js-item-share-buttons"></div>
                       <div class=
                       "flex flex-col gap-24 pt-40 pb-24">
                         <h4 class=
@@ -751,7 +750,7 @@
       </div>
     </div>
     <div data-event-options=
-    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;},{&quot;label&quot;:&quot;ホロケット7th&quot;,&quot;value&quot;:&quot;holoketto7&quot;}]"
+    "[{&quot;label&quot;:&quot;コミックマーケット102&quot;,&quot;value&quot;:&quot;c102&quot;},{&quot;label&quot;:&quot;コスホリック36&quot;,&quot;value&quot;:&quot;cosholic36&quot;},{&quot;label&quot;:&quot;COMIC CITY TOKYO149&quot;,&quot;value&quot;:&quot;comiccity-tokyo149&quot;},{&quot;label&quot;:&quot;ワンダーフェスティバル 2023[夏]&quot;,&quot;value&quot;:&quot;wonfes2023summer&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230728- &quot;,&quot;value&quot;:&quot;comiccity-online-230728&quot;},{&quot;label&quot;:&quot;I・Doll VOL.68&quot;,&quot;value&quot;:&quot;i-doll68&quot;},{&quot;label&quot;:&quot;JUNE BRIDE FES 2023&quot;,&quot;value&quot;:&quot;junebridefes2023&quot;},{&quot;label&quot;:&quot;acosta!マルシェvol.5&quot;,&quot;value&quot;:&quot;acosta-marche5&quot;},{&quot;label&quot;:&quot;COMIC CITY ONLINE-230623-&quot;,&quot;value&quot;:&quot;comiccity-online-0623&quot;},{&quot;label&quot;:&quot;SC2023 Summer&quot;,&quot;value&quot;:&quot;sc2023summer&quot;}]"
     data-ga-from="market_show" data-parent-category-options=
     "[{&quot;label&quot;:&quot;漫画&quot;,&quot;value&quot;:&quot;漫画&quot;},{&quot;label&quot;:&quot;イラスト&quot;,&quot;value&quot;:&quot;イラスト&quot;},{&quot;label&quot;:&quot;小説・その他書籍&quot;,&quot;value&quot;:&quot;小説・その他書籍&quot;},{&quot;label&quot;:&quot;グッズ&quot;,&quot;value&quot;:&quot;グッズ&quot;},{&quot;label&quot;:&quot;ファッション&quot;,&quot;value&quot;:&quot;ファッション&quot;},{&quot;label&quot;:&quot;アクセサリー&quot;,&quot;value&quot;:&quot;アクセサリー&quot;},{&quot;label&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;,&quot;value&quot;:&quot;フィギュア・ぬいぐるみ・ドール&quot;},{&quot;label&quot;:&quot;3Dモデル&quot;,&quot;value&quot;:&quot;3Dモデル&quot;},{&quot;label&quot;:&quot;音楽&quot;,&quot;value&quot;:&quot;音楽&quot;},{&quot;label&quot;:&quot;音声作品&quot;,&quot;value&quot;:&quot;音声作品&quot;},{&quot;label&quot;:&quot;ゲーム&quot;,&quot;value&quot;:&quot;ゲーム&quot;},{&quot;label&quot;:&quot;ソフトウェア・ハードウェア&quot;,&quot;value&quot;:&quot;ソフトウェア・ハードウェア&quot;},{&quot;label&quot;:&quot;素材データ&quot;,&quot;value&quot;:&quot;素材データ&quot;},{&quot;label&quot;:&quot;映像作品&quot;,&quot;value&quot;:&quot;映像作品&quot;},{&quot;label&quot;:&quot;写真作品&quot;,&quot;value&quot;:&quot;写真作品&quot;},{&quot;label&quot;:&quot;コスプレ&quot;,&quot;value&quot;:&quot;コスプレ&quot;},{&quot;label&quot;:&quot;絵画・アート作品&quot;,&quot;value&quot;:&quot;絵画・アート作品&quot;}]"
     data-portal-url="https://booth.pm/ja" data-search-params=
